--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-      <!-- Bootstrap CSS -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+      <!-- build:css css/main.css -->
       <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-      <link rel="stylesheet" href="css/styles.css">
+      <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+      <link href="css/styles.css" rel="stylesheet">
+      <!-- endbuild -->
 
     <title>AngelX</title>
 </head>
@@ -283,7 +286,7 @@
             <p>... then with hardwork we became a startup approved by MinTIC and Apps.co.</p>
             </div>
             <div class="col-12 col-sm-4">
-              <img class="d-block img-fluid" src="img/appsco.png" alt="Team" style="margin: auto; height:150px;">
+              <img class="d-block img-fluid" src="img/appsco.jpg" alt="Team" style="margin: auto; height:150px;">
             </div>
             <div class="col-12 col-sm-4">
               <p>Now we are a interdisciplinary team focused on creating a great service experience.</p>
@@ -321,11 +324,11 @@
       </div>
   </footer>
 
-  <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="js/scripts.js"></script>
+  <script type="text/javascript" src="js/scripts.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCj1kDtkbL86T4mOHniOL38Vs-s2-NyKfQ&callback=myMap"></script>
 
 </body>
