--- a/index.html
+++ b/index.html
@@ -301,16 +301,16 @@
               <div class="col-12 align-self-center">
                   <div class="text-center">
                       <p>Siguenos en:</p>
-                      <a class="btn btn-social-icon btn-instagram" href="http://www.linkedin.com/in/"><i class="fa fa-instagram fa-lg" style="color:white;"></i></a>
-                      <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-tumblr fa-lg" style="color:white;"></i></a>
-                      <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg" style="color:white;"></i></a>
+                      <a class="btn btn-social-icon" href="http://www.linkedin.com/in/"><i class="fa fa-instagram fa-lg" style="color:white;"></i></a>
+                      <a class="btn btn-social-icon" href="http://twitter.com/"><i class="fa fa-tumblr fa-lg" style="color:white;"></i></a>
+                      <a class="btn btn-social-icon" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg" style="color:white;"></i></a>
                   </div>
               </div>
                   <div class="col-12 align-self-center">
                       <div class="text-center">
                           <p><br>Contactanos por:</p>
-                          <a class="btn btn-social-icon btn-google" href="tel:+1234567"><i class="fa fa-phone fa-lg" style="color:white;"></i></a>
-                          <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-whatsapp fa-lg" style="color:white;"></i></a>
+                          <a class="btn btn-social-icon" href="tel:+1234567"><i class="fa fa-phone fa-lg" style="color:white;"></i></a>
+                          <a class="btn btn-social-icon" href="http://youtube.com/"><i class="fa fa-whatsapp fa-lg" style="color:white;"></i></a>
                           <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope fa-lg" style="color:white;"></i></a>
                       </div>
                   </div>
