--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-      <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+
+      <!-- Bootstrap CSS -->
       <!-- build:css css/main.css -->
       <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
@@ -324,13 +325,14 @@
       </div>
   </footer>
 
-
+  <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+  <!-- build:js js/main.js -->
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/scripts.js"></script>
+  <!-- endbuild -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCj1kDtkbL86T4mOHniOL38Vs-s2-NyKfQ&callback=myMap"></script>
-
 </body>
 
 </html>
